# reac-aes67

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
demo/: demo.sh  reac-a-rtp-source.conf  reac-sap-discover.conf
docs/: CONFIGURATION.md  EXAMPLES.md  INSTALLATION.md  OVERVIEW.md  README.md
docs/design/: ARCHITECTURE.md
docs/design/specs/: m5000-aes-ebu-conversion.md
openwrt/files/: capabilities-reac-aes67.json  network-aes67.example  ptp4l-dante.conf  reac-aes67.8  reac-aes67.config  reac-aes67.init
openwrt/luci-app-reac-aes67/: Makefile
openwrt/luci-app-reac-aes67/htdocs/luci-static/resources/view/reac-aes67/: status.js  streams.js
openwrt/luci-app-reac-aes67/root/usr/share/luci/menu.d/: luci-app-reac-aes67.json
openwrt/luci-app-reac-aes67/root/usr/share/rpcd/acl.d/: luci-app-reac-aes67.json
openwrt/reac-aes67/: Makefile
packaging/: make-tarball.sh  reac-aes67.conf  reac-aes67.service  reac-aes67.spec
pipewire/: .gitignore  CONNECTION-FSM.md  DESIGN.md  README.md  meson.build  meson_options.txt
pipewire/docs/: OUTPUTS.md
pipewire/src/: main.c  reac_ring.c  reac_ring.h  reac_rx.c  reac_rx.h  reac_sink_node.c  reac_sink_node.h  reac_source_node.c  reac_source_node.h  reac_tx.c  reac_tx.h
pipewire/subprojects/: libreac.wrap
pipewire/subprojects/packagefiles/libreac/: meson.build
pipewire/tests/: test_reac_ring.c  test_reac_tx.c
scripts/: build-apk.sh
src/: aes67_send.c  aes67_send.h  main.c  media_clock.c  media_clock.h  packetizer.c  packetizer.h  pcap_source.c  pcap_source.h  pipeline.c  pipeline.h  plc.c  plc.h  ptp_clock.c  ptp_clock.h  reac_capture.c  reac_capture.h  reac_decode.c  reac_decode.h  reac_mode.h  rtp_l24.c  rtp_l24.h  sap.c  sap.h  sdp.c  sdp.h  tone.c  tone.h  ubus_stats.c  ubus_stats.h
tests/: cross_verify.py  test_aes67_send.c  test_cli_sdp.sh  test_decode.c  test_e2e_udp.c  test_media_clock.c  test_packetizer.c  test_pcap_source.c  test_pipeline.c  test_plc.c  test_ptp_clock.c  test_repacer_retarget.c  test_repacer_steady.c  test_rtp_l24.c  test_sap.c  test_sdp.c  test_stats.c  test_tone.c  test_util.h
